--- a/03 - Object Detection.ipynb
+++ b/03 - Object Detection.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 15,
       "metadata": {
         "gather": {
           "logged": 1599692585672
@@ -49,6 +49,11 @@
         "from matplotlib import pyplot as plt\n",
         "from PIL import Image, ImageDraw, ImageFont\n",
         "import numpy as np\n",
+        "import os\n",
+        "%matplotlib inline\n",
+        "from azure.cognitiveservices.vision.computervision import ComputerVisionClient\n",
+        "from msrest.authentication import CognitiveServicesCredentials\n",
+        "from python_code import vision\n",
         "import os\n",
         "%matplotlib inline\n",
         "\n",
@@ -118,6 +123,13 @@
         "# Show the results of analysis (code in helper_scripts/vision.py)\n",
         "vision.show_image_analysis(image_path, analysis)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
